[package]
name = "arduino2nix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
colog = "1"
argh = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml_ng = "0.9"
semver = { version = "1.0", features = [ "serde" ] }
nom = "7.1"
convert_case = "0.6"
ureq = "2.10"
serde_json = "1.0"
